--- a/src/pages/IcebathPage/IcebathPage.css
+++ b/src/pages/IcebathPage/IcebathPage.css
@@ -274,11 +274,11 @@
     order: 2;
   }
   .benefit-content h3 {
-    padding: 0 8rem;
+    padding: 0 10rem;
   }
   .benefit-content p {
-    font-size: 16px;
-    padding: 0 8rem;
+    font-size: 14px;
+    padding: 0 10rem;
   }
 
   .text-left {
